# WebTechnologienHausarbeit

./: .gitignore  Makefile  README.md  app.yaml  pyproject.toml  run.py
bruno/: __init__.py  commands.py  forms.py  socketio.py
bruno/api/: __init__.py
bruno/api/v1/: __init__.py  game.py  lobby.py
bruno/database/: interaction.py  models.py
bruno/database/initializations/: cards.json
bruno/database/interaction/: accounts.py  base.py  game.py
bruno/forms/: accounts.py  base.py
bruno/sites/: __init__.py  account.py  accounts.py  base.py  game.py
bruno/sites/templates/: base.html  create_player.html  game.html  game_script.html  games.html  index.html  lobby.html  navbar.html  password.html
bruno/sites/templates/accounts/: create_user.html  login.html  login_register.html  logout.html
bruno/sites/templates/game/: lobby.html  password.html
bruno/socketio/: lobby.py
bruno/static/css/: game.css
bruno/static/images/: background.avif  createcards.py
bruno/utils/: accounts.py  base.py
migrations/versions/: 106ddfc4c232_.py  18a6ff0c1ad4_.py  1a48e3596bd7_.py  29846fab2d43_.py  4feb98aa72d3_.py  52e129d00b28_.py  647e4123dddd_.py  6b62a1bcd456_.py  73955f05e059_.py  7fe95005cad1_.py  802999480812_.py  87d668709157_.py  89851ab83119_.py  9523eb82a990_.py  a1846d088728_.py  b5b18610d6d6_.py  b883d1b2cf14_added_usertype_and_user_tables.py  c36f436b01a1_.py  e45ad39d48b1_.py  e79bd38ac7d0_.py  ff05de1e9831_.py
test/: index.html  index.html.save
