[tool.poetry]
name = "webtechnologienhausarbeit"
version = "0.1.0"
description = ""
authors = ["Nils Baxheinrich <nils.baxheinrich@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
wtforms = "^3.1.2"
flask-wtf = "^1.2.1"
email-validator = "^2.1.1"
hashids = "^1.3.1"
apscheduler = "^3.10.4"
flask-apscheduler = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
